alignment fixes

--- a/css/layout.css
+++ b/css/layout.css
@@ -232,9 +232,17 @@ ul#nav li.current a { color: #F06000; }
 .threecol{
   width:33.33%;
   float: left;
+  margin: 0 auto;
+  padding: 0; 
+  left: -50%;
+
 
 }
-
+#blocktext {
+   margin-left: auto;
+   margin-right: auto;
+   width: auto
+}
 @media only screen and (max-width: 767px) {
 
    .threecol{ width:100%}
